argocd/applications/ecran/ecran-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ecran
  name: ecran
  namespace: ecran
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: ecran
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ecran
    spec:
      serviceAccountName: ecran-sa
      containers:
        - name: ecran
          image: registry.ide-newton.ts.net/lab/ecran
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "100m"
              memory: "100Mi"
