argocd/applications/ecran/ecran-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ecran-worker
  name: ecran-worker
  namespace: ecran
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: ecran-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ecran-worker
    spec:
      containers:
        - name: ecran-worker
          image: registry.ide-newton.ts.net/lab/ecran-worker
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "100m"
              memory: "100Mi"
