argocd/applications/ecran/juge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juge-service
  namespace: ecran
spec:
  selector:
    app: juge
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
