argocd/applications/ecran/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ecran
  name: ecran
  namespace: ecran
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: ecran
