argocd/applications/ecran/standby-deny-egress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: standby-deny-egress
  namespace: ecran
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - java-standby
          - js-ts-standby
          - python-standby
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
